# rust-xp-ai-function

./: Cargo.toml
examples/: c01-chat.rs  c02-tool-calls.rs  c03-tool-responses.rs  c04-conv.rs  c05-schema.rs  c06-joinset.rs
src/: chat.rs  conv.rs  gpts.rs  lib.rs  model.rs  oa_client.rs
src/tools/: ai_tools.rs  mod.rs  spec.rs  weather.rs
src/utils/: mod.rs  x_value.rs
