[package]
name = "rust-xp-ai-function"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1", features = ["full"]}

async_openai = "0.19"

serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with ={ version = "3", features = ["macros"]}

rpc-router = "=0.1.3"

schemars = {version = "0.8"}

derive_more = {version = "1.0.0-beta", features = ["from"]}